# Version 0.1.1 - 2023-12-07
- [add][patch] Add MIT license.

# Version 0.1.0 - 2023-12-05
- [add][minor] Initial release.