@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Implement `Debug` for `TempMongo` and `TempMongoBuilder`.
+
 # Version 0.1.1 - 2023-12-07
 - [add][patch] Add MIT license.
 
